--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: objective-c
 osx_image: xcode7.2
-xcode_project: contakt/contakt.xcodeproj
-xcode_scheme: contakt
-xcode_sdk: iphonesimulator9.2
+
+script: ./test.sh
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
+# xcode_project: contakt/contakt.xcodeproj
+# xcode_scheme: contakt
+# xcode_sdk: iphonesimulator9.2
