--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ after_success:
 # xcode_project: contakt/contakt.xcodeproj
 # xcode_scheme: contakt
 # xcode_sdk: iphonesimulator9.2
+
+# Only build PRs and pushes to master
+# TODO: Change to master
+branches:
+  only:
+    - feature/codecov
