--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 osx_image: xcode7.1
-script: ./test.sh
+script: ./.test.sh
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
